Fix team section on mobile device widths.

--- a/public/assets/css/greenfield2.css
+++ b/public/assets/css/greenfield2.css
@@ -86,7 +86,20 @@ h4 {
   font-size: 80px;
   line-height: 88px;
   padding-bottom: 10px;
+}
 
+#splash .buttons .btn {
+  position: relative;
+  z-index: 6;
+  border: 1px solid #333;
+  color: #333;
+  border-radius: 5;
+  font-size: 11px;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: all 0.3s;
+  padding: 7px 13px;
+  background-color: rgba(182, 255, 115, 0.2);
 }
 
 @media (min-width: 768px) {
@@ -105,7 +118,7 @@ h4 {
 @media (max-width: 767px) and (min-width: 401px) {
   #splash .lead-descriptor .logo h1 {
     font-size: 48px;
-gg    line-height: 48px;
+    line-height: 48px;
     padding-bottom: 10px;
   }
 
@@ -345,9 +358,9 @@ header {
 }
 
 #nav ul li {
-  display: table-cell;
+  /*display: table-cell;*/
   vertical-align: middle;
-  float: none;
+  /*float: none;*/
 }
 
 #nav ul li a {
@@ -618,6 +631,23 @@ section.grey {
   background-repeat: no-repeat;
   z-index: 6;
 }
+
+@media (max-width: 1200px) and (min-width: 768px) {
+  .parallax {
+    background-size: 250% !important;
+  }
+}
+@media (max-width: 768px) {
+  .parallax {
+    background-size: 200% !important; }
+ }
+
+@media (max-width: 991px) {
+  .parallax {
+    background-attachment: scroll;
+    background-size: cover;
+  }
+}
 .pattern {
   display: block;
   position: absolute;
@@ -695,7 +725,6 @@ input[type=text]:focus {
   border-color: #017f10;
 }
 
-
 #location-map {
   height: 300px;
 }
@@ -704,7 +733,6 @@ input[type=text]:focus {
   width: 100%;
   height: 300px;
 }
-
 
 .portfolio-grid {
   margin: 20px 0 -60px;
@@ -720,14 +748,15 @@ input[type=text]:focus {
 }
 .portfolio-grid .portfolio-item {
   width: 20%;
-  display: none;
-  opacity: 0;
-  filter: alpha(opacity=0);
+  /*display: none;*/
+  /*opacity: 0;*/
+  /*filter: alpha(opacity=0);*/
   overflow: hidden;
   margin: 0;
   padding: 0;
   height: 230px;
   vertical-align: top;
+  display: inline-block;
 }
 .portfolio-grid .portfolio-item .portfolio-item-inner .portfolio-image {
   width: 100%;
@@ -898,6 +927,35 @@ input[type=text]:focus {
   margin: 30px 0 0;
   outline: medium none;
   text-transform: uppercase;
+}
+.portfolio-grid .portfolio-item .portfolio-item-inner .portfolio-image img {
+  width: 480px;
+  height: 230px;
+  transition: all 0.3s;
+  transform: scale(1);
+  position: absolute;
+  top: -9999px;
+  bottom: -9999px;
+  left: -9999px;
+  right: -9999px;
+  margin: auto;
+}
+.portfolio-grid .portfolio-item .portfolio-item-inner .portfolio-image:after {
+  transform: translateY(15px);
+  transition: all 0.3s;
+  border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #f6f6f6;
+  border-image: none;
+  border-style: solid;
+  border-width: 15px;
+  content: " ";
+  height: 0;
+  left: 50%;
+  margin: -20px 0 0 -15px;
+  pointer-events: none;
+  position: absolute;
+  bottom: 0;
+  width: 0;
+  z-index: 6;
 }
 .btn.btn-inverse {
   color: #fff;
